--- a/src/views/Home.module.scss
+++ b/src/views/Home.module.scss
@@ -12,7 +12,7 @@
         flex-shrink: 0;
     }
     .preview {
-        width: 400px;
+        width: 500px;
         height: 400px;
         border: 1px solid #000;
         overflow: hidden;
@@ -22,6 +22,13 @@
         width: 400px;
         height: 400px;
         border: 1px solid #000;
+    }
+    .svgBox {
+        width: 400px;
+        height: 400px;
+        border: 1px solid #000;
+        overflow: hidden;
+        flex-shrink: 0;
     }
 }
 
@@ -90,7 +97,7 @@
 }
 .container {
     width: 100%;
-    max-width: 960px;
+    max-width: 1200px;
     // max-width: 1000px;
     margin: 0 auto;
     padding: 16px;
